2006-12-28  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaExaTexUploadToScreen):

	Work around an obscure hardware limitation when texturing from
	AGP.
	
2006-12-28  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_dri.c: (VIASetAgpMode):

	Fix AGP mode setting.

2006-12-28  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	Use non-power-of-two textures for EXA whenever possible.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Initialize the AGP ring buffer before command submission.

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen), (viaInitExa):

	Indent via_accel.c

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload):

	Fix download from screen which was reusing kernel argument
	data that was altered by the kernel.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen):

	Reimplement download from screen to something more easily
	debuggable.

2006-12-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

        * unichrome/via_driver.c:
 
        Fixed some of the boolean option changes that need
        to be negated such as DisableIRQ. 

2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_memory.c: (viaExaFBSave), (viaOffScreenLinear):

	Cause a "FatalError" if EXA is used with an un-patched Xserver,
	and an illegal save locked memory action is requested.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAInitialize3DEngine):
